--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,9 @@
         android:icon="@drawable/carrinho_vazio"
         android:title="Carrinho"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_exit_to_app_black_24dp"
+        android:title="Carrinho"
+        app:showAsAction="always"/>
 </menu>
